<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_contact">Contact</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="tab_label1">Top Stories</string>
    <string name="tab_label2">Tech News</string>
    <string name="tab_label3">Cooking</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>

    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="textview"> Order </string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="address">Address</string>
    <string name="enter_address">Enter address</string>
    <string name="phone">Phone</string>
    <string name="enter_phone">Enter phone</string>
    <string name="note">Note</string>
    <string name="enter_note">Enter note</string>
    <string name="choose_a_delivery_method">Choose a delivery method:</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="go_to_checkboxes">Go to checkboxes</string>
    <string name="back">Back</string>
    <string name="oreo_cookie_crumbles">Oreo cookie crumbles</string>
    <string name="chokolate_syrup">Chokolate syrup</string>
    <string name="sprinkles">Sprinkles</string>
    <string name="crushed_nuts">Crushed nuts</string>
    <string name="cherries">Cherries</string>
    <string name="toast">Toast</string>
    <string name="action_settings">Contact</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>
    <string name="tap_to_test_the_alert">Tap to test the alert</string>
    <string name="alert">Alert</string>
    <string name="choose_a_date">Choose a date:</string>
    <string name="date">Date</string>
    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_time">Choose time</string>
    <string name="time">Time</string>
    <string name="title_activity_order">Order Activity</string>
    <string name="totab">ToTab</string>
    <string name="back_to_checkboxies">Back to Checkboxies</string>
    <string name="these_are_the_top_stories">These are the top stories:</string>
    <string name="tech_news_you_can_use">Tech news you can use:</string>
    <string name="cooking_tips">Cooking tips:</string>
</resources>